# airSpring

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTROL_EXPERIMENT_STATUS.md  HANDOFF_AIRSPRING_TO_TOADSTOOL_FEB_16_2026.md  README.md  run_all_baselines.sh
.github/workflows/: ci.yml
archive/: README.md
archive/scripts/: download_noaa.py
barracuda/: Cargo.toml  EVOLUTION_READINESS.md  deny.toml
barracuda/src/: biomeos.rs  error.rs  lib.rs  nautilus.rs  niche.rs  npu.rs  primal_science.rs  rpc.rs  testutil.rs  tolerances.rs  validation.rs
barracuda/src/eco/: anderson.rs  correction.rs  crop.rs  cytokine.rs  diversity.rs  drought_index.rs  dual_kc.rs  et0_ensemble.rs  evapotranspiration.rs  infiltration.rs  isotherm.rs  mod.rs  richards.rs  runoff.rs  sensor_calibration.rs  simple_et0.rs  soil_moisture.rs  solar.rs  thornthwaite.rs  tissue.rs  van_genuchten.rs  water_balance.rs  yield_response.rs
barracuda/src/gpu/: atlas_stream.rs  autocorrelation.rs  bootstrap.rs  device_info.rs  diversity.rs  dual_kc.rs  et0.rs  evolution_gaps.rs  gdd.rs  hargreaves.rs  infiltration.rs  isotherm.rs  jackknife.rs  kc_climate.rs  kriging.rs  local_dispatch.rs  mc_et0.rs  mod.rs  pedotransfer.rs  reduce.rs  richards.rs  runoff.rs  seasonal_pipeline.rs  sensor_calibration.rs  simple_et0.rs  stats.rs  stream.rs  thornthwaite.rs  van_genuchten.rs  water_balance.rs  yield_response.rs
barracuda/src/gpu/seasonal_pipeline/: mod.rs  multi_field.rs
barracuda/src/io/: csv_ts.rs  mod.rs
barracuda/src/ipc/: mod.rs  provenance.rs
barracuda/src/npu/: inference.rs  mod.rs  streaming.rs
barracuda/src/primal_science/: biodiversity.rs  crop.rs  drought_stats.rs  et0.rs  mod.rs  soil.rs  water_balance.rs
barracuda/src/shaders/: local_elementwise.wgsl  local_elementwise_f64.wgsl
barracuda/src/testutil/: bootstrap.rs  generators.rs  mod.rs  stats.rs
barracuda/src/tolerances/: atmospheric.rs  gpu.rs  instrument.rs  mod.rs  soil.rs
barracuda/tests/: cross_spring_absorption.rs  cross_spring_benchmarks.rs  cross_spring_evolution.rs  cross_spring_primitives.rs  determinism.rs  eco_dual_kc.rs  eco_integration.rs  eco_richards.rs  gpu_determinism.rs  gpu_evolution.rs  gpu_integration.rs  integration.rs  io_and_errors.rs  kriging.rs  nucleus_integration.rs  property_tests.proptest-regressions  property_tests.rs  seasonal_pipeline.rs  stats_integration.rs
barracuda/tests/common/: mod.rs
barracuda/tests/cross_spring_absorption/: main.rs  s70_cross_spring.rs
control/: bench_python_timing.py  requirements.txt
control/ameriflux_et/: ameriflux_et_validation.py  benchmark_ameriflux_et.json
control/anderson_coupling/: anderson_coupling.py  benchmark_anderson_coupling.json
control/atlas/: atlas_water_budget.py  benchmark_atlas.json
control/atlas_decade/: atlas_decade_analysis.py  benchmark_atlas_decade.json
control/barrier_skin/: barrier_skin.py  benchmark_barrier_skin.json
control/biochar/: benchmark_biochar.json  biochar_isotherms.py
control/blaney_criddle/: benchmark_blaney_criddle.json  blaney_criddle_et0.py
control/bootstrap_jackknife/: benchmark_bootstrap_jackknife.json  bootstrap_jackknife_et0.py
control/climate_scenario/: benchmark_climate_scenario.json  climate_scenario_analysis.py
control/coupled_runoff_infiltration/: benchmark_coupled_runoff.json  coupled_runoff_infiltration.py
control/cpu_gpu_parity/: benchmark_cpu_gpu_parity.json  cpu_gpu_parity.py
control/cross_species_skin/: benchmark_cross_species_skin.json  cross_species_skin.py
control/cw2d/: benchmark_cw2d.json  cw2d_richards.py
control/cytokine_brain/: benchmark_cytokine_brain.json  cytokine_brain.py
control/diversity/: benchmark_diversity.json  diversity_indices.py
control/drought_index/: benchmark_drought_index.json  drought_index_spi.py
control/dual_kc/: benchmark_cover_crop_kc.json  benchmark_dual_kc.json  cover_crop_dual_kc.py  dual_crop_coefficient.py
control/et0_bias_correction/: benchmark_et0_bias.json  et0_bias_correction.py
control/et0_ensemble/: benchmark_et0_ensemble.json  et0_ensemble.py
control/et0_intercomparison/: benchmark_et0_intercomparison.json  et0_three_method.py
control/fao56/: benchmark_fao56.json  compute_et0_real_data.py  penman_monteith.py
control/forecast_scheduling/: benchmark_forecast_scheduling.json  forecast_scheduling.py
control/gdd/: benchmark_gdd.json  growing_degree_days.py
control/gpu_math_portability/: benchmark_gpu_math.json  gpu_math_portability.py
control/green_ampt/: benchmark_green_ampt.json  green_ampt_infiltration.py
control/hamon/: benchmark_hamon.json  hamon_pet.py
control/hargreaves/: benchmark_hargreaves.json  hargreaves_samani.py
control/iot_irrigation/: anova_irrigation.R  benchmark_dong2024.json  calibration_dong2024.py
control/long_term_wb/: benchmark_long_term_wb.json  long_term_water_balance.py
control/lysimeter/: benchmark_lysimeter.json  lysimeter_et.py
control/makkink/: makkink_et0.py  (+1 more)
experiments/: README.md
graphs/: airspring_eco_pipeline.toml  airspring_niche_deploy.toml  airspring_provenance_pipeline.toml  cross_primal_soil_microbiome.toml
metalForge/: ABSORPTION_MANIFEST.md  README.md
metalForge/forge/: Cargo.toml  deny.toml
metalForge/forge/src/: dispatch.rs  graph.rs  hydrology.rs  inventory.rs  isotherm.rs  lib.rs  metrics.rs  moving_window_f64.rs  neural.rs  nucleus.rs  pipeline.rs  probe.rs  regression.rs  substrate.rs  van_genuchten.rs  workloads.rs
niches/: airspring-ecology.yaml
scripts/: atlas_stations.json  bench_compare.py  bench_comparison.json  bench_python_baselines.py  bench_python_results.json  cross_validate.py  download_atlas_80yr.py  download_enviroweather.py  download_noaa.py  download_open_meteo.py  download_usda_nass.py  ncbi_16s_fetch_sample.py  ncbi_16s_search.py  run_all_baselines.sh  test_nestgate_providers.py
specs/: ATLAS_STATION_LIST.md  BARRACUDA_REQUIREMENTS.md  BIOMEOS_CAPABILITIES.md  CROSS_SPRING_EVOLUTION.md  GPU_PROMOTION_MAP.md  NUCLEUS_INTEGRATION.md  PAPER_REVIEW_QUEUE.md  README.md
wateringHole/: README.md
whitePaper/: METHODOLOGY.md  README.md  STUDY.md
(+146 files in other folders)
