[package]
name = "airspring-barracuda"
version = "0.4.2"
edition = "2021"
authors = ["Squirrel Team"]
license = "AGPL-3.0-or-later"
description = "Ecological & agricultural science pipelines — Rust + GPU via BarraCuda/ToadStool"

[workspace]

[dependencies]
# BarraCuda: GPU-promotion target. airSpring validates that Rust baselines
# can be faithfully ported to BarraCuda shaders. Used for stats + validation primitives.
barracuda = { path = "../../phase1/toadstool/crates/barracuda" }

# JSON parsing: loads benchmark JSON files (control/fao56/*.json, etc.)
# with full provenance for validation fidelity.
# serde derive feature unused — only serde_json::Value API needed.
serde_json = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
cast_precision_loss = "allow"

[dev-dependencies]
# Async runtime for WgpuDevice initialisation in integration tests.
pollster = "0.3"

# ── Validation binaries ────────────────────────────────────────────
[[bin]]
name = "validate_et0"
path = "src/bin/validate_et0.rs"

[[bin]]
name = "validate_soil"
path = "src/bin/validate_soil.rs"

[[bin]]
name = "validate_iot"
path = "src/bin/validate_iot.rs"

[[bin]]
name = "validate_water_balance"
path = "src/bin/validate_water_balance.rs"

[[bin]]
name = "validate_sensor_calibration"
path = "src/bin/validate_sensor_calibration.rs"

[[bin]]
name = "validate_real_data"
path = "src/bin/validate_real_data.rs"

[[bin]]
name = "cross_validate"
path = "src/bin/cross_validate.rs"

[[bin]]
name = "simulate_season"
path = "src/bin/simulate_season.rs"

[[bin]]
name = "validate_dual_kc"
path = "src/bin/validate_dual_kc.rs"

[[bin]]
name = "validate_cover_crop"
path = "src/bin/validate_cover_crop.rs"

[[bin]]
name = "validate_regional_et0"
path = "src/bin/validate_regional_et0.rs"

[[bin]]
name = "bench_cpu_vs_python"
path = "src/bin/bench_cpu_vs_python.rs"

[[bin]]
name = "bench_airspring_gpu"
path = "src/bin/bench_airspring_gpu.rs"

[[bin]]
name = "validate_long_term_wb"
path = "src/bin/validate_long_term_wb.rs"

[[bin]]
name = "validate_biochar"
path = "src/bin/validate_biochar.rs"

[[bin]]
name = "validate_richards"
path = "src/bin/validate_richards.rs"

[[bin]]
name = "validate_yield"
path = "src/bin/validate_yield.rs"

[[bin]]
name = "validate_cw2d"
path = "src/bin/validate_cw2d.rs"
