[package]
name = "airspring-barracuda"
version = "0.5.4"
edition = "2021"
authors = ["Squirrel Team"]
license = "AGPL-3.0-or-later"
description = "Ecological & agricultural science pipelines — Rust + GPU + NPU via BarraCuda/ToadStool"

[workspace]

[features]
default = []
npu = ["dep:akida-driver"]

[dependencies]
# BarraCuda: GPU-promotion target. airSpring validates that Rust baselines
# can be faithfully ported to BarraCuda shaders. Used for stats + validation primitives.
barracuda = { path = "../../phase1/toadstool/crates/barracuda" }

# JSON parsing: loads benchmark JSON files (control/fao56/*.json, etc.)
# with full provenance for validation fidelity.
# serde derive feature unused — only serde_json::Value API needed.
# Pure Rust (no C deps) — sovereign-compatible.
serde_json = "1"

# Tracing subscriber: ValidationHarness (upstream S68+) uses tracing::info!.
# We init a simple fmt subscriber so harness output is visible.
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Async runtime for WgpuDevice initialization in validation binaries.
pollster = "0.3"

# BrainChip AKD1000 NPU driver — pure Rust, optional.
akida-driver = { path = "../../phase1/toadstool/crates/neuromorphic/akida-driver", optional = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
# Agricultural science operates on f64 throughout; usize→f64 casts for
# sample counts and loop indices are exact for N < 2^53.
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[dev-dependencies]
# Async runtime for WgpuDevice initialisation in integration tests.
pollster = "0.3"

# ── Validation binaries ────────────────────────────────────────────
[[bin]]
name = "validate_et0"
path = "src/bin/validate_et0.rs"

[[bin]]
name = "validate_soil"
path = "src/bin/validate_soil.rs"

[[bin]]
name = "validate_iot"
path = "src/bin/validate_iot.rs"

[[bin]]
name = "validate_water_balance"
path = "src/bin/validate_water_balance.rs"

[[bin]]
name = "validate_sensor_calibration"
path = "src/bin/validate_sensor_calibration.rs"

[[bin]]
name = "validate_real_data"
path = "src/bin/validate_real_data.rs"

[[bin]]
name = "cross_validate"
path = "src/bin/cross_validate.rs"

[[bin]]
name = "simulate_season"
path = "src/bin/simulate_season.rs"

[[bin]]
name = "validate_dual_kc"
path = "src/bin/validate_dual_kc.rs"

[[bin]]
name = "validate_cover_crop"
path = "src/bin/validate_cover_crop.rs"

[[bin]]
name = "validate_regional_et0"
path = "src/bin/validate_regional_et0.rs"

[[bin]]
name = "bench_cpu_vs_python"
path = "src/bin/bench_cpu_vs_python.rs"

[[bin]]
name = "bench_airspring_gpu"
path = "src/bin/bench_airspring_gpu.rs"

[[bin]]
name = "validate_long_term_wb"
path = "src/bin/validate_long_term_wb.rs"

[[bin]]
name = "validate_biochar"
path = "src/bin/validate_biochar.rs"

[[bin]]
name = "validate_richards"
path = "src/bin/validate_richards.rs"

[[bin]]
name = "validate_yield"
path = "src/bin/validate_yield.rs"

[[bin]]
name = "validate_cw2d"
path = "src/bin/validate_cw2d.rs"

[[bin]]
name = "validate_scheduling"
path = "src/bin/validate_scheduling.rs"

[[bin]]
name = "validate_lysimeter"
path = "src/bin/validate_lysimeter.rs"

[[bin]]
name = "validate_sensitivity"
path = "src/bin/validate_sensitivity.rs"

[[bin]]
name = "validate_atlas"
path = "src/bin/validate_atlas.rs"

[[bin]]
name = "validate_priestley_taylor"
path = "src/bin/validate_priestley_taylor.rs"

[[bin]]
name = "validate_et0_intercomparison"
path = "src/bin/validate_et0_intercomparison.rs"

[[bin]]
name = "validate_thornthwaite"
path = "src/bin/validate_thornthwaite.rs"

[[bin]]
name = "validate_gdd"
path = "src/bin/validate_gdd.rs"

[[bin]]
name = "validate_pedotransfer"
path = "src/bin/validate_pedotransfer.rs"

[[bin]]
name = "validate_nass_yield"
path = "src/bin/validate_nass_yield.rs"

[[bin]]
name = "validate_forecast"
path = "src/bin/validate_forecast.rs"

[[bin]]
name = "validate_scan_moisture"
path = "src/bin/validate_scan_moisture.rs"

[[bin]]
name = "validate_multicrop"
path = "src/bin/validate_multicrop.rs"

[[bin]]
name = "validate_npu_eco"
path = "src/bin/validate_npu_eco.rs"

[[bin]]
name = "validate_npu_funky_eco"
path = "src/bin/validate_npu_funky_eco.rs"

[[bin]]
name = "validate_npu_high_cadence"
path = "src/bin/validate_npu_high_cadence.rs"

[[bin]]
name = "validate_ameriflux"
path = "src/bin/validate_ameriflux.rs"

[[bin]]
name = "validate_hargreaves"
path = "src/bin/validate_hargreaves.rs"

[[bin]]
name = "validate_diversity"
path = "src/bin/validate_diversity.rs"

[[bin]]
name = "validate_makkink"
path = "src/bin/validate_makkink.rs"

[[bin]]
name = "validate_turc"
path = "src/bin/validate_turc.rs"

[[bin]]
name = "validate_hamon"
path = "src/bin/validate_hamon.rs"

[[bin]]
name = "validate_neural_api"
path = "src/bin/validate_neural_api.rs"

[[bin]]
name = "validate_et0_ensemble"
path = "src/bin/validate_et0_ensemble.rs"

[[bin]]
name = "validate_pedotransfer_richards"
path = "src/bin/validate_pedotransfer_richards.rs"

[[bin]]
name = "validate_et0_bias"
path = "src/bin/validate_et0_bias.rs"

[[bin]]
name = "validate_cpu_gpu_parity"
path = "src/bin/validate_cpu_gpu_parity.rs"

[[bin]]
name = "validate_seasonal_batch"
path = "src/bin/validate_seasonal_batch.rs"

[[bin]]
name = "validate_pure_gpu"
path = "src/bin/validate_pure_gpu.rs"

[[bin]]
name = "validate_gpu_live"
path = "src/bin/validate_gpu_live.rs"

[[bin]]
name = "validate_anderson"
path = "src/bin/validate_anderson.rs"

[[bin]]
name = "validate_atlas_stream"
path = "src/bin/validate_atlas_stream.rs"

[[bin]]
name = "validate_gpu_math"
path = "src/bin/validate_gpu_math.rs"

[[bin]]
name = "validate_ncbi_16s_coupling"
path = "src/bin/validate_ncbi_16s_coupling.rs"

[[bin]]
name = "validate_blaney_criddle"
path = "src/bin/validate_blaney_criddle.rs"

[[bin]]
name = "validate_scs_cn"
path = "src/bin/validate_scs_cn.rs"

[[bin]]
name = "validate_green_ampt"
path = "src/bin/validate_green_ampt.rs"

[[bin]]
name = "validate_coupled_runoff"
path = "src/bin/validate_coupled_runoff.rs"

[[bin]]
name = "validate_vg_inverse"
path = "src/bin/validate_vg_inverse.rs"

[[bin]]
name = "validate_season_wb"
path = "src/bin/validate_season_wb.rs"

[[bin]]
name = "bench_cross_spring"
path = "src/bin/bench_cross_spring.rs"
