[package]
name = "airspring-barracuda"
version = "0.7.5"
edition = "2021"
authors = ["Squirrel Team"]
license = "AGPL-3.0-or-later"
description = "Ecological & agricultural science pipelines — Rust + GPU + NPU via BarraCuda"

[workspace]

[features]
default = ["testutil", "standalone-http"]
testutil = []
standalone-http = ["dep:ureq"]
npu = ["dep:akida-driver"]

[dependencies]
# BarraCuda 0.3.3: standalone sovereign math engine (ecoPrimals/barraCuda).
# Extracted from ToadStool S89 — universal math, precision per hardware.
# v0.3.3: wgpu 28, DF64 precision tier, fused Welford stats, 3 airSpring ops absorbed.
# airSpring validates that Rust baselines can be faithfully ported to
# BarraCuda shaders. Used for stats, validation, GPU ops, and PDE primitives.
barracuda = { path = "../../barraCuda/crates/barracuda" }

# JSON parsing: loads benchmark JSON files (control/fao56/*.json, etc.)
# with full provenance for validation fidelity.
# serde derive feature unused — only serde_json::Value API needed.
# Pure Rust (no C deps) — sovereign-compatible.
serde_json = "1"

# Tracing subscriber: ValidationHarness (upstream S68+) uses tracing::info!.
# We init a simple fmt subscriber so harness output is visible.
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Synchronous HTTP client for standalone data providers (pre-biomeOS).
# NOTE: ureq's default TLS (rustls) pulls in `ring` (C/asm). When Tower
# Atomic is running, HTTPS should route through Songbird (Pure Rust TLS 1.3
# via BearDog crypto delegation) — see `data::provider::HttpTransport`.
# Evolution: ureq (standalone) → Songbird capability.call (sovereign).
# Gated behind `standalone-http` feature — disable for pure-Rust sovereignty.
ureq = { version = "3", optional = true }

# Nautilus Shell: evolutionary reservoir computing via BingoCube board populations.
# Domain-agnostic feed-forward reservoir — no temporal recurrence needed.
# Provides DriftMonitor, EdgeSeeder, NautilusShell, and NautilusBrain APIs.
bingocube-nautilus = { path = "../../primalTools/bingoCube/nautilus" }

# Serde: needed for Nautilus brain serialization (observations, shell state).
serde = { version = "1", features = ["derive"] }

# wgpu 28 — matches barraCuda 0.3.3's pinned version for type compatibility.
# Used by GPU buffer I/O (bytemuck transmute) and device interaction.
wgpu = { version = "28", default-features = false, features = ["wgsl", "vulkan", "vulkan-portability"] }

# bytemuck: safe transmute for GPU buffer I/O (f32 ↔ bytes).
bytemuck = { version = "1", features = ["derive"] }

# BrainChip AKD1000 NPU driver — pure Rust, optional.
akida-driver = { path = "../../phase1/toadstool/crates/neuromorphic/akida-driver", optional = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
# Agricultural science operates on f64 throughout; usize→f64 casts for
# sample counts and loop indices are exact for N < 2^53.
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[dev-dependencies]
# Serial test execution for env-var tests (biomeos) to avoid race conditions.
serial_test = "3"
# Property-based testing for scientific invariants.
proptest = "1"

# ── Validation binaries ────────────────────────────────────────────
[[bin]]
name = "validate_et0"
path = "src/bin/validate_et0.rs"

[[bin]]
name = "validate_soil"
path = "src/bin/validate_soil.rs"

[[bin]]
name = "validate_iot"
path = "src/bin/validate_iot.rs"

[[bin]]
name = "validate_water_balance"
path = "src/bin/validate_water_balance.rs"

[[bin]]
name = "validate_sensor_calibration"
path = "src/bin/validate_sensor_calibration.rs"

[[bin]]
name = "validate_real_data"
path = "src/bin/validate_real_data.rs"

[[bin]]
name = "cross_validate"
path = "src/bin/cross_validate.rs"

[[bin]]
name = "simulate_season"
path = "src/bin/simulate_season.rs"

[[bin]]
name = "validate_dual_kc"
path = "src/bin/validate_dual_kc.rs"

[[bin]]
name = "validate_cover_crop"
path = "src/bin/validate_cover_crop.rs"

[[bin]]
name = "validate_regional_et0"
path = "src/bin/validate_regional_et0.rs"

[[bin]]
name = "bench_cpu_vs_python"
path = "src/bin/bench_cpu_vs_python/main.rs"

[[bin]]
name = "bench_airspring_gpu"
path = "src/bin/bench_airspring_gpu.rs"

[[bin]]
name = "validate_long_term_wb"
path = "src/bin/validate_long_term_wb.rs"

[[bin]]
name = "validate_biochar"
path = "src/bin/validate_biochar.rs"

[[bin]]
name = "validate_richards"
path = "src/bin/validate_richards.rs"

[[bin]]
name = "validate_yield"
path = "src/bin/validate_yield.rs"

[[bin]]
name = "validate_cw2d"
path = "src/bin/validate_cw2d.rs"

[[bin]]
name = "validate_scheduling"
path = "src/bin/validate_scheduling.rs"

[[bin]]
name = "validate_lysimeter"
path = "src/bin/validate_lysimeter.rs"

[[bin]]
name = "validate_sensitivity"
path = "src/bin/validate_sensitivity.rs"

[[bin]]
name = "validate_atlas"
path = "src/bin/validate_atlas.rs"

[[bin]]
name = "validate_priestley_taylor"
path = "src/bin/validate_priestley_taylor.rs"

[[bin]]
name = "validate_et0_intercomparison"
path = "src/bin/validate_et0_intercomparison.rs"

[[bin]]
name = "validate_thornthwaite"
path = "src/bin/validate_thornthwaite.rs"

[[bin]]
name = "validate_gdd"
path = "src/bin/validate_gdd.rs"

[[bin]]
name = "validate_pedotransfer"
path = "src/bin/validate_pedotransfer.rs"

[[bin]]
name = "validate_nass_yield"
path = "src/bin/validate_nass_yield.rs"

[[bin]]
name = "validate_forecast"
path = "src/bin/validate_forecast.rs"

[[bin]]
name = "validate_scan_moisture"
path = "src/bin/validate_scan_moisture.rs"

[[bin]]
name = "validate_multicrop"
path = "src/bin/validate_multicrop.rs"

[[bin]]
name = "validate_npu_eco"
path = "src/bin/validate_npu_eco.rs"

[[bin]]
name = "validate_npu_funky_eco"
path = "src/bin/validate_npu_funky_eco.rs"

[[bin]]
name = "validate_npu_high_cadence"
path = "src/bin/validate_npu_high_cadence.rs"

[[bin]]
name = "validate_ameriflux"
path = "src/bin/validate_ameriflux.rs"

[[bin]]
name = "validate_hargreaves"
path = "src/bin/validate_hargreaves.rs"

[[bin]]
name = "validate_diversity"
path = "src/bin/validate_diversity.rs"

[[bin]]
name = "validate_makkink"
path = "src/bin/validate_makkink.rs"

[[bin]]
name = "validate_turc"
path = "src/bin/validate_turc.rs"

[[bin]]
name = "validate_hamon"
path = "src/bin/validate_hamon.rs"

[[bin]]
name = "validate_neural_api"
path = "src/bin/validate_neural_api.rs"

[[bin]]
name = "validate_et0_ensemble"
path = "src/bin/validate_et0_ensemble.rs"

[[bin]]
name = "validate_pedotransfer_richards"
path = "src/bin/validate_pedotransfer_richards.rs"

[[bin]]
name = "validate_et0_bias"
path = "src/bin/validate_et0_bias.rs"

[[bin]]
name = "validate_cpu_gpu_parity"
path = "src/bin/validate_cpu_gpu_parity.rs"

[[bin]]
name = "validate_seasonal_batch"
path = "src/bin/validate_seasonal_batch.rs"

[[bin]]
name = "validate_pure_gpu"
path = "src/bin/validate_pure_gpu.rs"

[[bin]]
name = "validate_gpu_live"
path = "src/bin/validate_gpu_live.rs"

[[bin]]
name = "validate_anderson"
path = "src/bin/validate_anderson.rs"

[[bin]]
name = "validate_atlas_stream"
path = "src/bin/validate_atlas_stream.rs"

[[bin]]
name = "validate_gpu_math"
path = "src/bin/validate_gpu_math.rs"

[[bin]]
name = "validate_ncbi_16s_coupling"
path = "src/bin/validate_ncbi_16s_coupling.rs"

[[bin]]
name = "validate_blaney_criddle"
path = "src/bin/validate_blaney_criddle.rs"

[[bin]]
name = "validate_scs_cn"
path = "src/bin/validate_scs_cn.rs"

[[bin]]
name = "validate_green_ampt"
path = "src/bin/validate_green_ampt.rs"

[[bin]]
name = "validate_coupled_runoff"
path = "src/bin/validate_coupled_runoff.rs"

[[bin]]
name = "validate_vg_inverse"
path = "src/bin/validate_vg_inverse.rs"

[[bin]]
name = "validate_season_wb"
path = "src/bin/validate_season_wb.rs"

[[bin]]
name = "bench_cross_spring"
path = "src/bin/bench_cross_spring/main.rs"

[[bin]]
name = "validate_gpu_pipeline"
path = "src/bin/validate_gpu_pipeline.rs"

[[bin]]
name = "validate_gpu_streaming_multi_field"
path = "src/bin/validate_gpu_streaming_multi_field.rs"

[[bin]]
name = "validate_cpu_parity_benchmark"
path = "src/bin/validate_cpu_parity_benchmark.rs"

[[bin]]
name = "validate_pure_gpu_multi_field"
path = "src/bin/validate_pure_gpu_multi_field.rs"

[[bin]]
name = "validate_cross_spring_rewire"
path = "src/bin/validate_cross_spring_rewire.rs"

[[bin]]
name = "validate_gpu_rewire_benchmark"
path = "src/bin/validate_gpu_rewire_benchmark.rs"

[[bin]]
name = "validate_climate_scenario"
path = "src/bin/validate_climate_scenario.rs"

[[bin]]
name = "validate_atlas_decade"
path = "src/bin/validate_atlas_decade.rs"

[[bin]]
name = "validate_nass_real"
path = "src/bin/validate_nass_real.rs"

[[bin]]
name = "validate_ncbi_diversity"
path = "src/bin/validate_ncbi_diversity.rs"

[[bin]]
name = "airspring_primal"
path = "src/bin/airspring_primal.rs"

[[bin]]
name = "validate_nucleus"
path = "src/bin/validate_nucleus.rs"

[[bin]]
name = "validate_nucleus_pipeline"
path = "src/bin/validate_nucleus_pipeline.rs"

[[bin]]
name = "bench_cross_spring_evolution"
path = "src/bin/bench_cross_spring_evolution/main.rs"

[[bin]]
name = "validate_dispatch_experiment"
path = "src/bin/validate_dispatch_experiment.rs"

[[bin]]
name = "validate_biome_graph"
path = "src/bin/validate_biome_graph.rs"

[[bin]]
name = "validate_barrier_skin"
path = "src/bin/validate_barrier_skin.rs"

[[bin]]
name = "validate_cross_species"
path = "src/bin/validate_cross_species.rs"

[[bin]]
name = "validate_cytokine"
path = "src/bin/validate_cytokine.rs"

[[bin]]
name = "validate_tissue"
path = "src/bin/validate_tissue.rs"

[[bin]]
name = "validate_paper_chain"
path = "src/bin/validate_paper_chain.rs"

[[bin]]
name = "validate_local_gpu"
path = "src/bin/validate_local_gpu.rs"

[[bin]]
name = "validate_cross_spring_provenance"
path = "src/bin/validate_cross_spring_provenance.rs"

[[bin]]
name = "validate_cross_spring_evolution"
path = "src/bin/validate_cross_spring_evolution.rs"

[[bin]]
name = "validate_mc_et0"
path = "src/bin/validate_mc_et0.rs"

[[bin]]
name = "validate_bootstrap_jackknife"
path = "src/bin/validate_bootstrap_jackknife.rs"

[[bin]]
name = "validate_drought_index"
path = "src/bin/validate_drought_index.rs"

[[bin]]
name = "validate_cross_spring_modern"
path = "src/bin/validate_cross_spring_modern.rs"

[[bin]]
name = "validate_nucleus_modern"
path = "src/bin/validate_nucleus_modern.rs"
