[package]
name = "airspring-forge"
version = "0.1.0"
edition = "2021"
authors = ["Squirrel Team"]
license = "AGPL-3.0-or-later"
description = "Cross-system compute dispatch for airSpring ecological pipelines (CPU → GPU → NPU)"

[workspace]

[dependencies]
wgpu = { version = "24", features = ["vulkan-portability"] }
serde_json = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"

[[bin]]
name = "validate_dispatch_routing"
path = "src/bin/validate_dispatch_routing.rs"

[[bin]]
name = "validate_dispatch"
path = "src/bin/validate_dispatch.rs"

[[bin]]
name = "validate_live_hardware"
path = "src/bin/validate_live_hardware.rs"
