[package]
name = "airspring-forge"
version = "0.1.0"
edition = "2021"
authors = ["Squirrel Team"]
license = "AGPL-3.0-or-later"
description = "Cross-system compute dispatch for airSpring ecological pipelines (CPU → GPU → NPU)"

[workspace]

[dependencies]
# wgpu 28 — matches barraCuda v0.3.3+ (wgpu 28, vulkan backend).
wgpu = { version = "28", default-features = false, features = ["wgsl", "vulkan", "vulkan-portability"] }
# Block-on for sync contexts (wgpu 28 enumerate_adapters is async).
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# BarraCuda standalone primal (ecoPrimals/barraCuda) — universal math engine.
barracuda = { path = "../../../barraCuda/crates/barracuda" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"

[[bin]]
name = "validate_dispatch_routing"
path = "src/bin/validate_dispatch_routing.rs"

[[bin]]
name = "validate_dispatch"
path = "src/bin/validate_dispatch.rs"

[[bin]]
name = "validate_live_hardware"
path = "src/bin/validate_live_hardware.rs"

[[bin]]
name = "validate_mixed_pipeline"
path = "src/bin/validate_mixed_pipeline.rs"

[[bin]]
name = "validate_nucleus_routing"
path = "src/bin/validate_nucleus_routing.rs"
